--- a/practica-javascript.html
+++ b/practica-javascript.html
@@ -10,8 +10,8 @@
             <div class="card" id="card">
                 <div>
                     <div>
-                        <button id="gatito" class="button-1 color-blue"> Gatito</button>
-                        <button id="gatote" class="button-2 color-violet"> Gatote</button> 
+                        <button id="gatito" class="button-1 color-blue" onclick="cambio1()"> Gatito</button>
+                        <button id="gatote" class="button-2 color-violet" onclick="cambio2()"> Gatote</button> 
                     </div>
                 </div>
                 <div class="img">
